src/test/ui/parser/issue-41155.stderr
error: expected one of `(`, `async`, `const`, `default`, `existential`, `extern`, `fn`, `type`, or `unsafe`, found `}`
  --> $DIR/issue-41155.rs:15:1
   |
LL |     pub
   |        - expected one of 9 possible tokens here
LL | } //~ ERROR expected one of
   | ^ unexpected token

error: aborting due to previous error

